--- a/docs/src/content/docs/index.mdx
+++ b/docs/src/content/docs/index.mdx
@@ -38,6 +38,7 @@ You should NOT use this if you:
 - Secrets management with multiple scopes to keep them out of your code.
 - **Web UI:** Browser-based management interface
 - **API key authentication:** Flexible key-based access control
+- **Per-function CORS:** Browser-friendly cross-origin support with automatic preflight handling
 - Encryption at rest for API keys and secrets
 
 ## Next steps
